# OneCard

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml  main.yml
core/: database.py  token.py
onecard-api/: .dockerignore  Dockerfile  README.md  logging_config.py  main.py  pyproject.toml  requirements.txt
onecard-api/api/v1/: card_response.py  login.py  manage_card.py  nfc_polling.py  oauth.py
onecard-api/core/: conn_noti_server.py  database.py  token.py
onecard-api/models/: employee.py  permission.py  pubkey.py  service.py
onecard-api/schemas/: card.py  login.py  nfc.py  oauth.py  userinfo.py
onecard-api/services/: card_response.py  get_authorization.py  init_login.py  logout.py  manage_card.py  nfc_satus.py  token_service.py
onecard-api/templates/: login.html  waiting.html
onecard-api/utils/: decrypt.py  find_service.py  get_current_session.py  get_hashed.py  redirect_error.py  redis_const.py
onecard-app/: Dockerfile  main.py  pyproject.toml  requirements.txt
onecard-app/api/: login.py
onecard-app/core/: database.py  redis.py  token.py
onecard-app/crud/: login.py
onecard-app/models/: employee.py  pubkey.py
onecard-app/schemas/: login.py
onecard-pushserver/: .dockerignore  .env  Dockerfile  index.js  package.json
onecard-web/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
onecard-web/core/: database.py  redis.py  token.py  token_instance.py
onecard-web/models/: employee.py  permission.py  pubkey.py  service.py  user.py
onecard-web/schemas/: card.py  (+3 more)
schemas/: user.py
(+22 files in other folders)
